--- a/day 4/style/styles.css
+++ b/day 4/style/styles.css
@@ -1,3 +1,15 @@
-#row{
+#first{
     position: absolute;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+#second{
+    position:absolute;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+#third{
+    position:absolute;
+    padding-left: 5px;
+    padding-right: 5px;
 }
